--- a/requirements.txt
+++ b/requirements.txt
@@ -1,231 +1,4 @@
-absl-py==2.0.0
-aiohttp==3.9.3
-aiosignal==1.3.1
-altair==5.1.2
-annotated-types==0.6.0
-anyio==4.0.0
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.2.3
-asttokens==2.4.0
-astunparse==1.6.3
-async-lru==2.0.4
-attrs==23.1.0
-Babel==2.12.1
-backcall==0.2.0
-beautifulsoup4==4.12.2
-bleach==6.0.0
-blinker==1.6.2
-branca==0.7.1
-cachetools==5.3.1
-certifi==2023.7.22
-cffi==1.15.1
-charset-normalizer==3.2.0
-click==8.1.7
-cloudpickle==3.0.0
-colorama==0.4.6
-comm==0.1.4
-contourpy==1.1.1
-cycler==0.11.0
-datasets==2.16.1
-debugpy==1.8.0
-decorator==5.1.1
-defusedxml==0.7.1
-dill==0.3.7
-et-xmlfile==1.1.0
-executing==1.2.0
-fastjsonschema==2.18.0
-featuretools==1.27.0
-filelock==3.13.1
-flatbuffers==23.5.26
-folium==0.15.1
-fonttools==4.42.1
-fqdn==1.5.1
-frozenlist==1.4.1
-fsspec==2023.10.0
-gast==0.5.4
-gitdb==4.0.10
-GitPython==3.1.37
-google-auth==2.25.2
-google-auth-oauthlib==1.1.0
-google-pasta==0.2.0
-grpcio==1.60.0
-h5py==3.10.0
-holidays==0.35
-html5lib==1.1
-htmlmin==0.1.12
-huggingface-hub==0.20.3
-idna==3.4
-ImageHash==4.3.1
-importlib-metadata==6.8.0
-importlib-resources==6.1.0
-ipykernel==6.25.2
-ipython==8.14.0
-ipython-genutils==0.2.0
-ipywidgets==8.0.6
-isoduration==20.11.0
-jedi==0.19.0
-Jinja2==3.1.2
-joblib==1.1.1
-json5==0.9.14
-jsonpointer==2.4
-jsonschema==4.19.1
-jsonschema-specifications==2023.7.1
-jupyter-console==6.6.3
-jupyter-contrib-core==0.4.2
-jupyter-contrib-nbextensions==0.7.0
-jupyter-events==0.6.3
-jupyter-highlight-selected-word==0.2.0
-jupyter-lsp==2.2.0
-jupyter-nbextensions-configurator==0.6.3
-jupyter-tabnine==1.2.3
-jupyter_client==8.3.1
-jupyter_core==5.3.0
-jupyter_server==2.6.0
-jupyter_server_terminals==0.4.4
-jupyterlab==4.0.6
-jupyterlab-pygments==0.2.2
-jupyterlab-widgets==3.0.7
-jupyterlab_server==2.23.0
-jupyterthemes==0.20.0
-kaggle==1.5.16
-keras==2.15.0
-kiwisolver==1.4.4
-lazy-object-proxy==1.9.0
-lesscpy==0.15.1
-libclang==16.0.6
-lxml==4.9.2
-Markdown==3.5.1
-markdown-it-py==3.0.0
-MarkupSafe==2.1.3
-matplotlib==3.7.1
-matplotlib-inline==0.1.6
-mccabe==0.7.0
-mdurl==0.1.2
-missingno==0.5.2
-mistune==2.0.5
-ml-dtypes==0.2.0
-multidict==6.0.4
-multimethod==1.10
-multiprocess==0.70.15
-nbclassic==1.0.0
-nbclient==0.8.0
-nbconvert==7.4.0
-nbextensions==66.0.2
-nbformat==5.9.0
-nest-asyncio==1.5.6
-networkx==3.2
-notebook==6.1.5
-notebook_shim==0.2.3
-numpy==1.24.3
-oauthlib==3.2.2
-openpyxl==3.1.2
-opt-einsum==3.3.0
-overrides==7.3.1
-packaging==23.1
-pandas==2.0.2
-pandas-profiling==3.2.0
-pandocfilters==1.5.0
-parso==0.8.3
-phik==0.12.3
-pickleshare==0.7.5
-Pillow==9.5.0
-platformdirs==3.5.3
-plotly==5.18.0
-pluggy==1.2.0
-ply==3.11
-prometheus-client==0.17.0
-prompt-toolkit==3.0.38
-protobuf==4.23.4
-psutil==5.9.5
-pure-eval==0.2.2
-pyarrow==13.0.0
-pyarrow-hotfix==0.6
-pyasn1==0.5.1
-pyasn1-modules==0.3.0
-pycparser==2.21
-pydantic==2.3.0
-pydantic_core==2.6.3
-pydeck==0.8.1b0
-Pygments==2.15.1
-pylint==2.17.6
-pyparsing==3.0.9
-pyrsistent==0.19.3
-python-dateutil==2.8.2
-python-json-logger==2.0.7
-python-jsonrpc-server==0.4.0
-python-language-server==0.36.2
-python-slugify==8.0.1
-pytz==2023.3
-PyWavelets==1.4.1
-pywin32==306
-pywinpty==2.0.10
-PyYAML==6.0
-pyzmq==25.1.0
-qtconsole==5.4.3
-QtPy==2.3.1
-referencing==0.30.2
-requests==2.31.0
-requests-oauthlib==1.3.1
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rich==13.6.0
-rpds-py==0.10.3
-rsa==4.9
-scikit-learn==1.3.2
-scipy==1.10.1
-seaborn==0.12.2
-Send2Trash==1.8.2
-simplejson==3.19.1
-six==1.16.0
-smmap==5.0.1
-sniffio==1.3.0
-soupsieve==2.4.1
-stack-data==0.6.2
-statistics==1.0.3.5
-streamlit==1.27.2
-streamlit-folium==0.18.0
-streamlit-option-menu==0.3.12
-tangled-up-in-unicode==0.2.0
-tenacity==8.2.3
-tensorboard==2.15.1
-tensorboard-data-server==0.7.2
-tensorflow==2.15.0
-tensorflow-estimator==2.15.0
-tensorflow-intel==2.15.0
-tensorflow-io-gcs-filesystem==0.31.0
-termcolor==2.4.0
-terminado==0.17.1
-text-unidecode==1.3
-threadpoolctl==3.2.0
-tinycss2==1.2.1
-toml==0.10.2
-tomlkit==0.12.1
-toolz==0.12.0
-tornado==6.3.2
-tqdm==4.66.1
-traitlets==5.9.0
-txt2tags==3.8
-typer==0.9.0
-typing_extensions==4.6.3
-tzdata==2023.3
-tzlocal==5.0.1
-ujson==5.8.0
-uri-template==1.2.0
-urllib3==2.0.3
-validators==0.22.0
-visions==0.7.4
-watchdog==3.0.0
-wcwidth==0.2.6
-webcolors==1.13
-webencodings==0.5.1
-websocket-client==1.5.3
-Werkzeug==3.0.1
-widgetsnbextension==4.0.7
-woodwork==0.26.0
-wrapt==1.14.1
-xxhash==3.4.1
-xyzservices==2023.10.1
-yarl==1.9.4
-zipp==3.17.0
-zope.interface==6.0
+os
+numpy
+streamlit
+tensorflow
